log
Sun, May  4, 2025 12:10:07 PM: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
5729e4d
Sun, May  4, 2025 12:14:57 PM: 
 treemap.c | 25 ++++++++++++++++++++++++-
 1 file changed, 24 insertions(+), 1 deletion(-)
 tests:  3|7
total_score: 5/70
c90938f
Sun, May  4, 2025 12:28:37 PM: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  10|6
total_score: 15/70
bb6ccb9
Sun, May  4, 2025 12:31:36 PM: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  12|6
total_score: 15/70
3235d48
Sun, May  4, 2025 12:32:33 PM: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  13|5
total_score: 25/70
bd5690e
Sun, May  4, 2025 12:34:09 PM: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
0dbf10d
Sun, May  4, 2025 12:44:03 PM: 
 treemap.c | 44 ++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 44 insertions(+)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'removeNode':
treemap.c:126:23: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
         int succKey = successor->pair->key;
                       ^~~~~~~~~
treemap.c:129:25: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
         temp->pair->key = succKey;
                         ^
cc1.exe: all warnings being treated as errors
7b48f6a
Sun, May  4, 2025 12:45:42 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|4
total_score: 30/70
17416cc
